# blango

./: data.json  db.sqlite3  pyproject.toml
blango/: settings.py  urls.py
blango_auth/: admin.py  models.py
blango_auth/migrations/: 0001_initial.py  0002_auto_20230804_1141.py
blog/: admin.py  api_views.py  forms.py  models.py  views.py
blog/api/: permissions.py  serializers.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_comment.py  0003_auto_20230511_1015.py  0004_alter_post_published_at.py  0005_alter_comment_created_at_alter_comment_object_id.py  0005_auto_20230801_1212.py  0006_authorprofile.py  0007_alter_post_slug.py  0008_alter_tag_value.py
blog/templatetags/: blog_extras.py
templates/: base.html
templates/blog/: post-detail.html
