[tool.poetry]
name = "codio"
version = "0.1.0"
description = ""
authors = ["HGTech96"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
djangorestframework = "^3.14.0"
django-admin = "^2.0.2"
dj-database-url = "^2.0.0"
django-configurations = "^2.4.1"
django-crispy-forms = "^2.0"
crispy-bootstrap5 = "^0.7"
django-debug-toolbar = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
